--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "twbs/bootstrap": "4.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
