--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine On
 RewriteRule ^video/?$ /view/video/
+RewriteRule ^playlist/?$ /view/playlist/
 RewriteRule ^login/?$ /view/login/
 RewriteRule ^upload/?$ /view/upload/
 RewriteRule ^logout/?$ /php/logout.php
