search function now works, also search.html, search/index.php, _nav.html added/edited. Also changed user.php class file to User.php

--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,6 @@ RewriteRule ^playlist/?$ /view/playlist/
 RewriteRule ^user/?$ /view/user/
 RewriteRule ^login/?$ /view/login/
 RewriteRule ^upload/?$ /view/upload/
+RewriteRule ^search/?$ /view/search/
 RewriteRule ^logout/?$ /php/logout.php
 RewriteRule ^/?$ /view/home/index.php
