admin home.html now works - plus changes in Urge.php making the interface with urge.php class more simplistic by removing some redundant functionality.

--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,11 @@
 RewriteEngine On
-RewriteRule ^video/?$ /view/video/
+RewriteRule ^video/?$    /view/video/
 RewriteRule ^playlist/?$ /view/playlist/
-RewriteRule ^user/?$ /view/user/
-RewriteRule ^login/?$ /view/login/
-RewriteRule ^upload/?$ /view/upload/
-RewriteRule ^search/?$ /view/search/
-RewriteRule ^logout/?$ /php/logout.php
-RewriteRule ^/?$ /view/home/index.php
-RewriteRule ^error/?$ /view/error/
-RewriteRule ^error/?$ /view/error/index.php
+RewriteRule ^user/?$     /view/user/
+RewriteRule ^login/?$    /view/login/
+RewriteRule ^upload/?$   /view/upload/
+RewriteRule ^search/?$   /view/search/
+RewriteRule ^logout/?$   /php/logout.php
+RewriteRule ^home/?$     /view/home/
+RewriteRule ^/?$         /view/home/
+RewriteRule ^error/?$    /view/error/
